--- a/trello_api.mustache
+++ b/trello_api.mustache
@@ -11,5 +11,11 @@ class TrelloApi(object):
         self.{{module}} = {{class}}(apikey, token)
         {{/sections}}
 
+    def set_token(self, token):
+        self._token = token
+        {{#sections}}
+        self.{{module}}._token = token
+        {{/sections}}
+
     def get_token_url(self, app_name, expires='30days', write_access=True):
         return 'https://trello.com/1/authorize?key=%s&name=%s&expiration=%s&response_type=token&scope=%s' % (self._apikey, quote_plus(app_name), expires, 'read,write' if write_access else 'read')
